src/sass/modulos/_global.sass
:root, .text-color-1
	@include css-properties
	@include typography-properties

body
	overflow-x: hidden
	padding-top: var(--static-header-height)
	&.hide-static-header
		--static-header-height: 0px
		.header:not(.header--sticky)
			display: none
	&.hide-sticky-header .header--sticky
		display: none

// allow main content to be placed over page header:
.main-content
	position: relative
	z-index: 89

.subir-page-header
	margin-top: calc( var(--static-header-height) * -1 )

.text-color-2
	--primary-color-light: #{$white-lighten-2}
	--primary-color-lighter: #{$white-lighten-1}
	--secondary-color-light: #{$white-lighten-2}
	--secondary-color-lighter: #{$white-lighten-1}
	--form-ui-color-2: #{$white-lighten-2}
	--form-ui-color-3: #{$white-lighten-1}
	--table-ui-color-2: #{$white-lighten-2}
	--table-ui-color-3: #{$white-lighten-1}
	color: var(--font-color-2)
	h1,h2,h3,h4,h5,h6
		color: inherit
	a
		color: inherit

.text-color-1
	color: var(--font-color)
	h1,h2,h3,h4,h5,h6
		color: var(--font-color)

.mt0
	margin-top: 0 !important

.pdt0
	padding-top: 0

.wp-caption
	display: inline-block
	text-align: center
	&-text
		display: block

.parallax
	background-attachment: fixed

.img-full-width, .full-width-image
	width: 100%

.align-items-center
	display: flex
	align-content: center
	justify-content: center
	flex-direction: column

.pdf-responsive
	position: relative
	padding-bottom: 88%
	padding-top: 30px
	height: 0
	overflow: hidden
	iframe,object, video, embed
		position: absolute
		top: 0
		left: 0
		width: 100%
		height: 100%

.rotate-on-active
	transition: 500ms all
.active
	.rotate-on-active
		transform: rotate(-180deg)

.overflow-auto
	overflow: auto

.overflow-scroll
	overflow: auto

.overflow-hidden
	overflow: hidden

.alignleft, img.alignleft
	margin-right: 30px

.cursor-pointer
	cursor: pointer

img
	vertical-align: bottom
	max-width: 100%
	height: auto

p + .pdf-responsive
	margin-bottom: 30px

// Fix layerslider arrows over sidenav
.ls-v6 .ls-nav-prev,
.ls-v6 .ls-nav-next
	z-index: 100 !important

[data-sharer] *
	pointer-events: none

@media #{$medium-and-down}
	.hide-br br
		display: none

@media only screen and (max-width: 580px)
	.row .col
		padding: 0

@media #{$medium-only}
	.center-on-tablet, .center-on-tablet *
		text-align: center !important
	.left-on-tablet, .left-on-tablet *
		text-align: left !important
	.right-on-tablet, .right-on-tablet *
		text-align: right !important
	.hide-br-tablet br
		display: none

@media #{$small-and-down}
	.movil-img-full-width
		width: 100%
	.center-on-mobile, .center-on-mobile *
		text-align: center !important
	.left-on-mobile, .left-on-mobile *
		text-align: left !important
	.right-on-mobile, .right-on-mobile *
		text-align: right !important
	.hide-br-mobile br
		display: none
	.hide-on-mobile
		display: none
	.reverse-on-mobile
		display: flex
		flex-direction: column-reverse
	.center-background-on-mobile
		background-size: cover
		background-position: center

